assets/style.css
*
{
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;
}

.navbar {
    background-color: #333132;
    font-size: 12pt;
    padding-left: 20px;
    position: fixed;
    z-index: 350;
    width: 100%
}

.nav-link {
    color: white;
    font-family: 'Alice', serif;
    font-size: 18px;
}

.nav-link:hover {
    color: palegoldenrod;
}

.navbar-brand {
    color: palegoldenrod;
    font-family: 'Alice', serif;
    font-size: 18pt;
}

.navbar-brand:hover {
    color: white;
}

/* .leftSide, .rightSide {
    margin-top: 55px;
    height: 50vh;
    width: 100%;
} */

.leftSide {
    background-image: url('./images/Marble.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.rightSide {
    margin-top: 155px;
    background-color: #cdd2e3;
    color: #383835;
}

@media screen and (min-width: 100px) {
    .leftSide {
        margin-top: 55px;
        margin-bottom: -135px;
        height: 93vh;
    }
    .rightSide {
        margin-top: 55px;
        margin-bottom: -1355px;
        height: 93vh;
    }
}

.name {
    font-size: 55px;
    border-top: 5px solid white;
    border-bottom: 5px solid white;
    color: black;
    font-family: 'Alice', serif;
    text-align: center;
}

.rightSide, .title {
    font-size: 35px;
    font-family: 'Alice', serif;
    text-align: center;

}

.aboutMe {
    background-color: #333132;
    color: white;
    padding: 20px;
    font-family: 'Alice', serif;
}

#aboutMeHeader {
    padding: 20px;
    margin-top: 15px;
    font-family: 'Alice', serif;
}

#appsHeader {
    font-family: 'Alice', serif;
    margin-bottom: 30px;
}

.sectionHeader {
    margin-top: 10px;
    margin-bottom: 20px;
    font-family: 'Alice', serif;
    text-align: center;
}

.sectionSubHeader {
    margin-bottom: 40px;
    font-family: 'Alice', serif;
    text-align: center;

}

.proPic {
    height: 365px;
    width: 365px;
    margin-right: 35px;
}

.description {
    font-size: 18px;
    font-family: 'Alice', serif;
}

.projects {
    background-color: #cdd2e3;
    color: black;
    padding: 40px;
}

.btn {
    opacity: .7;
}

.btn:hover {
    opacity: 1;
}

.card {
    margin-bottom: 30px;
    /* min-width: 380px; */
    max-width: 450px;
}

.card-img-top {
    height: 280px;
    /* width: 100%; */
    background-position: cover;
}

.card-header {
    padding-top: 25px;
}

.card-text {
    font-size: 14px;
    padding: -5px;
}

.skills {
    background-color: #333132;
    color: white;
    padding: 10px;
}

#skillsHeader {
    font-family: 'Alice', serif;
    padding-top: 5px;
    padding: 30px;
}

i {
    padding: 12px;
}

.contact {
    background-color: #cdd2e3;
    color: black;
}

#contactHeader {
    font-family: 'Alice', serif;
    padding-top: 35px;
    padding-bottom: 10px;
}

.footer {
    background-color:#333132;
    color: white;
    font-family: 'Alice', serif;

}

.logo {
    color: #333132;
}

.logo:hover {
    color: white;
}

